# Integer-Array

./: Cargo.toml  README.md  RELEASES.md
numerical_verificatons/: cosine_verification.jl  numerical_verification.jl  sine_verification.jl  tan_verification.jl
src/: .lib.rs.swp  .vector.rs.swp  complex.rs  constants.rs  functions.rs  lib.rs  real.rs  trait_definitions.rs  utility.rs  utility_functions.rs  vector.rs
src/complex/: array.rs  vector.rs
src/real/: array.rs  vector.rs
tests/: integration_test.rs
