[package]
name = "numeric_array"
version = "0.1.0"
authors = ["Erik Buer"]
edition = "2018"
description = "No-STD numeric array."
readme = "README.md"
repository = "https://github.com/ErikBuer/Numeric-Array.git"
license-file = "LICENSE"
keywords = ["dsp", "radio", "audio","no_std"]
exclude = ["numerical_verificatons/"]

[lib]
name = "numeric_array"
bench = false
test = true

[dependencies]
