[package]
name = "numeric_array"
version = "0.1.0"
authors = ["Erik Buer"]
edition = "2018"
description = "No-STD numeric array."
readme = "README.md"
repository = "https://github.com/ErikBuer/Numeric-Array.git"
license-file = "LICENSE"
keywords = ["dsp", "radio", "audio","no_std"]
exclude = ["numerical_verificatons/"]

[lib]
name  = "numeric_array"
path  = "src/lib.rs"
bench = false
doc   = true
test  = true
edition    = "2018"
crate-type = ["lib"]

[dependencies]
