[package]
name = "integer_array"
version = "0.2.1"
authors = ["Erik Buer"]
edition = "2018"
description = "No-STD numeric array."
readme = "README.md"
repository = "https://github.com/ErikBuer/Integer-Array.git"
license-file = "LICENSE"
keywords = ["dsp", "radio", "audio","no_std"]
exclude = ["numerical_verificatons/"]

[lib]
name  = "integer_array"
path  = "src/lib.rs"
bench = false
doc   = true
test  = true
edition    = "2018"
crate-type = ["lib"]

[dependencies]
fixed = "1.10.0"
spectrum-analyzer = "1.1.2"

[dependencies.num]
version = "0.4"
default-features = false